--- a/src/components/engage.css
+++ b/src/components/engage.css
@@ -1,17 +1,28 @@
-.engageParent {
+.engagePage {
     background-color: rgb(51, 10, 85);
     /* background: #0A0A0A; */
+    width: 1440px;
+height: 720px;
+display: flex;
+align-items: center;
+justify-content: center;
+
+
+}
+
+.engageParent {
+
+    width: 1235px;
+    height: 517px;
 
 }
 
 .engageTitle {
 
     /* position: absolute; */
-    width: 857px;
+    width: 600px;
     height: 186.48px;
-    margin: 35px;
-    margin-left: 50px;
-    padding: 50px;
+    margin-bottom: 88.52px;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 600;
@@ -27,7 +38,8 @@
     /* position: absolute; */
     width: 342px;
     height: 242px;
-    margin: 35px;
+    margin-left: 52px;
+    border-radius: 0px 0px 60px 0px;
 
     color: #FFFFFF;
     box-sizing: border-box;
@@ -40,7 +52,7 @@
 
 .engageStepBox {
     display: flex;
-    margin-left: 150px;
+    margin-left: 53px;
 }
 
 .engageStepNum {
