--- a/src/components/Mint/Mint.css
+++ b/src/components/Mint/Mint.css
@@ -4,10 +4,9 @@
     align-items: flex-start;
     flex-direction: column;
     background: rgb(33,5,53);
-    /* background: linear-gradient(90deg, rgba(33,5,53,1) 0%, rgba(0,0,0,1) 100%) */
     background-color: black;
     width: 100%;
-    height: 100vh; 
+    height: 100vh;
 }
 
 .mintTitle {
@@ -48,7 +47,7 @@
 }
 
 
-.mintButton {
+.buttonMint {
     outline: none;
     padding: 10px 0;
     font-size: large;
@@ -62,7 +61,7 @@
 
 .mintDesign {
     position: absolute;
-    top: 12%;
+    top: 112%;
     right: 2%;
     width: 20%;
     height: 45%;
@@ -78,7 +77,7 @@
 
 .elipse{
     position: absolute;
-    top: 12%;
+    top: 112%;
     right: 14%;
     width: 25%;
     height: 50%;
@@ -155,7 +154,7 @@
     bottom: 0;
     height: 50%;
     left: 0;
-    top: 70%;
+    top: 170%;
     transform: translate(-50%, -50%);
     background: #794CEC;
     border: 1px solid #000000;
@@ -314,7 +313,7 @@
         backdrop-filter: blur(14px);
     }
     
-    .mintButton {
+    .buttonMint {
         outline: none;
         padding: 10px 0;
         font-size: large;
@@ -328,7 +327,7 @@
     
     .mintDesign {
         position: absolute;
-        top: 12%;
+        top: 82%;
         right: 2%;
         width: 85%;
         height: 45%;
@@ -337,7 +336,7 @@
     
     .elipse{
         position: absolute;
-        top: 28%;
+        top: 98%;
         right: 12%;
         width: 65%;
         height: 50%;
@@ -345,13 +344,14 @@
 
     .bottomElipse {
         width: 105%;
+        top: 140%;
     }
 
     .mintBottomText {
         font-size: xx-large;
         color: white;
         margin-left: 30px;
-        margin-top: 100%;
+        margin-top: 110%;
         margin-bottom: 5px;
     }
 
