--- a/src/components/Engage/Engage.css
+++ b/src/components/Engage/Engage.css
@@ -78,4 +78,62 @@
     right: 10%;
     border-top-left-radius: 80px;
     border-bottom-right-radius: 80px;
-  }
+}
+
+@media screen and (max-width: 641px) {
+    .engagePage {
+        justify-content: flex-start;
+        flex-direction: column;
+        height: 140vh;
+    }
+    .engageFilter {
+        width: 100%;
+        height: 100%;
+        top: 220%;
+        transform: none;
+    }
+    .engageParent {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        flex-wrap: wrap;
+        height: auto;
+        width: 100%;
+    }
+    .engageTitle {
+        font-size: xx-large;
+        text-align: center;
+        margin: 50px 0;
+        width: 100%;
+        height: auto;
+        font-weight: 400;
+    }
+    .engageStepBox {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        width: 100%;
+    }
+    .engageSteps {
+        width: 60%;
+        height: auto;
+        margin: 20px 0;
+    }
+    .engageStepNum {
+        font-size: xxx-large;
+        margin-bottom: 5px;
+        margin-top: 15px;
+    }
+    .engageStepName {
+        margin-bottom: 15px;
+        margin-top: 5px;
+        font-size: x-large;
+    }
+    .skull {
+        top: 248%;
+        width: 80%;
+        left: 10%;
+    }
+}
