--- a/src/components/HowToAiverse/HowToAiverse.css
+++ b/src/components/HowToAiverse/HowToAiverse.css
@@ -96,7 +96,7 @@
   margin-right: 20px;
 } 
 
-@media only screen and (max-width: 1400px){
+/* @media only screen and (max-width: 1400px){
     .header-aiverse{
       width: 45%;
     }
@@ -148,9 +148,6 @@
 }
 
 @media only screen and (max-width: 650px){
-  .App{
-    width: 130%;
-  }
   .header-aiverse{
     width: 70%;
     text-align: center;
@@ -171,5 +168,63 @@
     width: 44%;
     height: 70%;
     transform: rotate(37deg);
+  }
+} */
+
+@media screen and (max-width: 641px) {
+  .aiversebg {
+    width: 100%;
+    height: 100vh;
+  }
+  .howToFilter {
+    top: 61.5%;
+    height: 100vh;
+  }
+  .top-header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-left: 0;
+  }
+  .header-aiverse {
+    width: 100%;
+    font-size: xx-large;
+    text-align: center;
+  }
+  .p1 {
+    margin: 0;
+    font-size: larger;
+    line-height: 1.2;
+  }
+  .techImg {
+    width: 42%;
+    height: 50%;
+    margin-left: 25%;
+    margin-top: -15%;
+  }
+  .robot {
+    height: 35%;
+    margin-top: -24%;
+    width: 60%;
+    margin-left: -2%;
+  }
+  .box {
+    height: 11%;
+    width: 80%;
+    padding: 10px 20px;
+    margin-left: 0;
+  }
+  .imagin {
+    width: 60%;
+    height: 85px;
+    line-height: 35px;
+    margin-left: 0;
+  }
+  .space {
+    width: 35%;
+    height: 85%;
+    top: -105px;
+    left: 60%;
   }
 }
