--- a/src/components/NFT/NFT.css
+++ b/src/components/NFT/NFT.css
@@ -95,6 +95,8 @@
     font-size: 50px;
     text-align: center;
     top: 0;
+    margin-left: 0;
+    width: 100%;
   }
   .carding {
     margin: 0;
