--- a/src/components/HowToAiverse/HowToAiverse.css
+++ b/src/components/HowToAiverse/HowToAiverse.css
@@ -171,6 +171,79 @@
   }
 } */
 
+@media screen and (max-width: 1440px) {
+  .header-aiverse {
+    font-size: 3rem;
+  }
+  .robot {
+    margin-top: -16%;
+  }
+}
+
+@media screen and (max-width: 1248px) {
+  .header-aiverse {
+    font-size: 40px;
+  }
+  .techImg {
+    width: 18%;
+    margin-left: 68%;
+  }
+  .robot {
+    margin-top: -20%;
+  }
+}
+
+@media screen and (max-width: 1152px) {
+  .howToFilter {
+    top: 96.1%;
+  }
+  .robot {
+      margin-top: -21%;
+  }
+  .techImg {
+      margin-left: 65%;
+  }
+  .box {
+      width: 35%;
+  }
+}
+
+@media screen and (max-width: 1056px) {
+  .howToFilter {
+    top: 96.1%;
+  }
+  .p1 {
+    font-size: 25px;
+    margin-top: 15%;
+  }
+  .techImg {
+    width: 19%;
+    margin-left: 63%;
+  }
+  .robot {
+    margin-top: -21.5%;
+  }
+  .box {
+    width: 42%;
+  }
+}
+
+@media screen and (max-width: 960px) {
+  .techImg {
+    width: 20%;
+    margin-left: 60%;
+  }
+  .robot {
+    margin-top: -23.5%;
+  }
+}
+
+@media screen and (max-width: 960px) {
+  .header-aiverse {
+    font-size: 30px;
+  }
+}
+
 @media screen and (max-width: 641px) {
   .aiversebg {
     width: 100%;
