--- a/src/components/Engage/Engage.css
+++ b/src/components/Engage/Engage.css
@@ -36,8 +36,8 @@
 }
 
 .engageSteps {
-    width: 342px;
-    height: 242px;
+    width: auto;
+    height: auto;
     margin-left: 52px;
     border-radius: 0px 0px 60px 0px;
     color: #FFFFFF;
@@ -88,7 +88,8 @@
         font-size: 30px;
     }
     .skull {
-        width: 18%;
+        /* width: 18%; */
+        display: none;
     }
 }
 
@@ -119,7 +120,8 @@
     .engagePage {
         justify-content: flex-start;
         flex-direction: column;
-        height: 140vh;
+        /* height: 140vh; */
+        height: 100vh;
     }
     .engageFilter {
         width: 100%;
@@ -132,9 +134,10 @@
         justify-content: center;
         align-items: center;
         flex-direction: column;
-        flex-wrap: wrap;
+        /* flex-wrap: wrap; */
         height: auto;
         width: 100%;
+        height: 100vh;
     }
     .engageTitle {
         font-size: xx-large;
@@ -167,7 +170,7 @@
         font-size: x-large;
     }
     .skull {
-        top: 248%;
+        top: 265%;
         width: 80%;
         left: 10%;
     }
