--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -38,10 +38,10 @@
 }
 
 .bigHand {
-    height: 100%;
+    height: 90%;
     position: absolute;
     right: 5%;
-    width: 40%;
+    width: 35%;
 }
 
 .titleBarParent {
@@ -170,16 +170,32 @@
     font-size: 25px;
 }
 
+.section {
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+    width: 100%;
+    border-top: 2px solid grey;
+    border-bottom: 2px solid grey;
+    z-index: 1000;
+    height: 5%;
+}
+
 .headerBottom {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    border-top: 2px solid grey;
-    border-bottom: 2px solid grey;
     width: 100%;
     color: white;
-    margin-top: 2%;
+    margin-top: 0;
     height: 5%;
+    animation-name: slider;
+    animation-duration: 10s;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: infinite;
+    animation-direction: normal;
+    animation-fill-mode: backwards;
+    animation-play-state: running;
 }
 
 .headerBottomContent {
@@ -194,7 +210,7 @@
 }
 
 @media screen and (min-width: 1249px) and (max-width: 1440px) {
-    .headerBottom {
+    .section {
         margin-top: 0;
     }
 }
@@ -203,7 +219,7 @@
     .bigHand {
         height: 95%;
     }
-    .headerBottom {
+    .section {
         margin-top: -8px;
     }
 }
@@ -224,20 +240,21 @@
         font-size: 18px;
         padding: 20px 50px;
     }
-    .headerBottom {
+    .section {
         margin-top: 72px;
     }
 }
 
 @media screen and (min-width: 865px) and (max-width: 960px) {
-    .headerBottom {
+    .section {
         margin-top: 30px;
     }
 }
 
 @media screen and (min-width: 642px) and (max-width: 864px) {
     .mintYourNft {
-        padding: 8px 50px;
+        padding: 10px 10px;
+        width: 200px;
     }
     .bigHand {
         width: 50%;
@@ -245,7 +262,7 @@
     .headerInternalLinks {
         display: none;
     }
-    .headerBottom {
+    .section {
         display: none;
     }
 }
@@ -334,13 +351,27 @@
     .headerBottom {
         display: flex;
         width: 100%;
-        overflow: auto;
         justify-content: flex-start;
     }
     
     .headerBottomContent {
         white-space: nowrap;
         margin: 0 10px;
+    }
+
+    @keyframes slider {
+        0% {
+          transform: translate(0, 0);
+        }
+        33% {
+            transform: translate(-70%, 0);
+        }
+        66% {
+            transform: translate(-130%, 0);
+        }
+        100% {
+            transform: translate(-200%, 0);
+        } 
     }
 } 
 
