--- a/src/components/Mint/Mint.css
+++ b/src/components/Mint/Mint.css
@@ -205,6 +205,7 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
+    text-align: center;
 }
 
 .mintFooterLinkParent {
@@ -295,19 +296,21 @@
     }
 }
 
-@media screen and (min-width: 961px) and(max-width: 1056px) {
+@media screen and (min-width: 961px) and (max-width: 1056px) {
     .mintDesign {
-        width: 28%;
-        margin-right: 10%;
+        /* width: 28%;
+        margin-right: 10%; */
+        display: none;
     }
     .internalLink {
         font-size: x-small;
     }
 }
 
-@media screen and (min-width: 642px) and(max-width: 960px) {
+@media screen and (min-width: 642px) and (max-width: 960px) {
     .mintDesign {
-        top: 450%;
+        /* top: 450%; */
+        display: none;
     }
 }
 
