--- a/src/components/NFT/NFT.css
+++ b/src/components/NFT/NFT.css
@@ -36,10 +36,11 @@
 
 .hr{
   position: relative;
-  top: 6rem;
+  top: 6.5rem;
   width: 25%;
-  left: -5rem;
+  left: 5rem;
   text-align: left;
+  margin: 30px 0;
   font-family: 'PT Mono', monospace;
 }
 
@@ -96,13 +97,16 @@
     line-height: 3rem;
   }
   .hr {
-    left: -3rem;
+    left: 5rem;
   }
 }
 
 @media screen and (min-width: 642px) and (max-width: 1056px) {
   .Cardprop {
     width: 25%;
+  }
+  .CardHeader {
+    font-size: xx-large;
   }
 }
 
@@ -131,7 +135,7 @@
     position: inherit;
   }
   .Cardprop {
-    width: 100%;
+    width: 80%;
     height: 300px;
     margin: 20px 0;
     padding: 20px 0;
