--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -52,6 +52,7 @@
     padding: 15px 10px;
     background: rgba(255, 255, 255, 0.1);
     height: calc(10% - 30px);
+    z-index: 1000;
 }
 
 .logoTitleParent {
@@ -179,6 +180,7 @@
     border-bottom: 2px solid grey;
     z-index: 1000;
     height: 5%;
+    margin-top: 20px;
 }
 
 .headerBottom {
@@ -211,7 +213,7 @@
 
 @media screen and (min-width: 1249px) and (max-width: 1440px) {
     .section {
-        margin-top: 0;
+        margin-top: 55px;
     }
 }
 
@@ -220,7 +222,7 @@
         height: 95%;
     }
     .section {
-        margin-top: -8px;
+        margin-top: 65px;
     }
 }
 
@@ -247,7 +249,7 @@
 
 @media screen and (min-width: 865px) and (max-width: 960px) {
     .section {
-        margin-top: 30px;
+        margin-top: 80px;
     }
 }
 
