--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,387 +1,397 @@
 .headerParent {
-    display: flex;
-    justify-content: start;
-    align-items: flex-start;
-    flex-direction: column;
-    width: 100%;
-    height: 100vh;
-    background-color: black;
+  display: flex;
+  justify-content: start;
+  align-items: flex-start;
+  flex-direction: column;
+  width: 100%;
+  height: 100vh;
+  background-color: black;
 }
 
 .headerEllipse {
-    background: linear-gradient(180deg, #FB03F5 0%, #AA9CFF 100%);
-    filter: blur(189.415px);
-    transform: rotate(50deg);
-    position: absolute;
-    width: 270px;
-    height: 400px;
-    left: 0;
-    top: -30px;
+  background: linear-gradient(180deg, #fb03f5 0%, #aa9cff 100%);
+  filter: blur(189.415px);
+  transform: rotate(50deg);
+  position: absolute;
+  width: 270px;
+  height: 400px;
+  left: 0;
+  top: -30px;
 }
 
 .headerEllipseTwo {
-    position: absolute;
-    width: 195px;
-    height: 950px;
-    left: 165px;
-    top: -400px;
-    background: linear-gradient(261.63deg, #7000FF 4.87%, #06FFF0 70%);
-    filter: blur(267.94px);
-    transform: rotate(30deg);
+  position: absolute;
+  width: 195px;
+  height: 950px;
+  left: 165px;
+  top: -400px;
+  background: linear-gradient(261.63deg, #7000ff 4.87%, #06fff0 70%);
+  filter: blur(267.94px);
+  transform: rotate(30deg);
 }
 
 .spiral {
-    width: 100%;
-    position: absolute;
-    margin-top: 5%;
-    height: 80%;
+  width: 100%;
+  position: absolute;
+  margin-top: 5%;
+  height: 80%;
 }
 
 .bigHand {
-    height: 90%;
-    position: absolute;
-    right: 5%;
-    width: 35%;
+  height: 90%;
+  position: absolute;
+  right: 5%;
+  width: 35%;
 }
 
 .titleBarParent {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: calc(100% - 20px);
-    padding: 15px 10px;
-    background: rgba(255, 255, 255, 0.1);
-    height: calc(10% - 30px);
-    z-index: 1000;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: calc(100% - 20px);
+  padding: 15px 10px;
+  background: rgba(255, 255, 255, 0.1);
+  height: calc(10% - 30px);
+  z-index: 1000;
 }
 
 .logoTitleParent {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .headerLogo {
-    width: 90px;
-    height: 50px;
+  width: 90px;
+  height: 50px;
 }
 
 .headerTitles {
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    flex-direction: column;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-direction: column;
 }
 
 .aiverse {
-    font-weight: bold;
-    color: white;
-    margin: 0;
-    text-align: start;
+  font-weight: bold;
+  color: white;
+  margin: 0;
+  text-align: start;
 }
 
 .nfts {
-    margin: 0;
-    color: white;
+  margin: 0;
+  color: white;
 }
 
 .headerInternalLinks {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    color: white;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  color: white;
 }
 
 .headerInternalLink {
-    color: white;
-    margin: 0 30px;
+  color: white;
+  margin: 0 30px;
 }
 
 .headerExternalLink {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    color: white;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  color: white;
 }
 
 .connectButton {
-    outline: none;
-    font-size: large;
-    padding: 15px 20px;
-    background: #9E64F8;
-    color: white;
-    border: none;
-    margin-right: 10px;
-    clip-path: polygon(25% 0, 100% 0, 100% 40%, 100% 75%, 75% 100%, 39% 100%, 0 100%, 0% 25%);
+  outline: none;
+  font-size: large;
+  padding: 15px 20px;
+  background: #9e64f8;
+  color: white;
+  border: none;
+  cursor: pointer;
+  margin-right: 10px;
+  clip-path: polygon(
+    25% 0,
+    100% 0,
+    100% 40%,
+    100% 75%,
+    75% 100%,
+    39% 100%,
+    0 100%,
+    0% 25%
+  );
 }
 
 .externalLink {
-    border: none;
-    outline: none;
-    color: white;
-    margin: 0 15px;
-    background-color: transparent;
-    padding: 0;
+  border: none;
+  outline: none;
+  color: white;
+  margin: 0 15px;
+  background-color: transparent;
+  padding: 0;
 }
 
 .headerContent {
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    flex-direction: column;
-    width: 60%;
-    padding-left: 60px;
-    color: white;
-    height: calc(70% - 5% - 66px);
-    padding: 5%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-direction: column;
+  width: 60%;
+  padding-left: 60px;
+  color: white;
+  height: calc(70% - 5% - 66px);
+  padding: 5%;
 }
 
 .headerAttractiveHeading {
-    font-size: 70px;
-    margin: 0;
-    font-weight: bold;
-    text-align: start;
+  font-size: 70px;
+  margin: 0;
+  font-weight: bold;
+  text-align: start;
 }
 
 .headerSubHeading {
-    font-size: 50px;
-    margin: 8px 0;
-    text-align: start;
+  font-size: 50px;
+  margin: 8px 0;
+  text-align: start;
 }
 
 .headerHeadingContent {
-    margin: 0;
-    line-height: 1.5;
-    text-align: start;
+  margin: 0;
+  line-height: 1.5;
+  text-align: start;
 }
 
 .poweredBy {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    margin-top: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  margin-top: 50px;
 }
 
 .mintYourNft {
-    border: 2px solid white;
-    background: linear-gradient(98.35deg, #2603FB 18.95%, #DC06FF 96.51%);
-    border-radius: 100px;
-    padding: 20px 60px;
-    color: white;
-    font-size: 25px;
+  border: 2px solid white;
+  background: linear-gradient(98.35deg, #2603fb 18.95%, #dc06ff 96.51%);
+  border-radius: 100px;
+  padding: 20px 60px;
+  color: white;
+  font-size: 25px;
 }
 
 .section {
-    display: flex;
-    align-items: center;
-    overflow: hidden;
-    width: 100%;
-    border-top: 2px solid grey;
-    border-bottom: 2px solid grey;
-    z-index: 1000;
-    height: 5%;
-    margin-top: 20px;
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+  width: 100%;
+  border-top: 2px solid grey;
+  border-bottom: 2px solid grey;
+  z-index: 1000;
+  height: 5%;
+  margin-top: 20px;
 }
 
 .headerBottom {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    width: 100%;
-    color: white;
-    margin-top: 0;
-    height: 5%;
-    animation-name: slider;
-    animation-duration: 10s;
-    animation-timing-function: ease-in-out;
-    animation-iteration-count: infinite;
-    animation-direction: normal;
-    animation-fill-mode: backwards;
-    animation-play-state: running;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+  color: white;
+  margin-top: 0;
+  height: 5%;
+  animation-name: slider;
+  animation-duration: 10s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+  animation-direction: normal;
+  animation-fill-mode: backwards;
+  animation-play-state: running;
 }
 
 .headerBottomContent {
-    margin: 0;
-    padding: 10px 0;
-    font-size: larger;
-    font-weight: 500;
+  margin: 0;
+  padding: 10px 0;
+  font-size: larger;
+  font-weight: 500;
 }
 
 .headerBottom::-webkit-scrollbar {
-    display: none;
+  display: none;
 }
 
 @media screen and (min-width: 1249px) and (max-width: 1440px) {
-    .section {
-        margin-top: 55px;
-    }
+  .section {
+    margin-top: 55px;
+  }
 }
 
 @media screen and (min-width: 1057px) and (max-width: 1248px) {
-    .bigHand {
-        height: 95%;
-    }
-    .section {
-        margin-top: 65px;
-    }
+  .bigHand {
+    height: 95%;
+  }
+  .section {
+    margin-top: 65px;
+  }
 }
 
 @media screen and (min-width: 961px) and (max-width: 1056px) {
-    .headerAttractiveHeading {
-        font-size: 40px;
-    }
-    .headerSubHeading {
-        font-size: 50px;
-    }
-    .bigHand {
-        width: 42%;
-        height: 90%;
-        right: 0%;
-    }
-    .mintYourNft {
-        font-size: 18px;
-        padding: 20px 50px;
-    }
-    .section {
-        margin-top: 72px;
-    }
+  .headerAttractiveHeading {
+    font-size: 40px;
+  }
+  .headerSubHeading {
+    font-size: 50px;
+  }
+  .bigHand {
+    width: 42%;
+    height: 90%;
+    right: 0%;
+  }
+  .mintYourNft {
+    font-size: 18px;
+    padding: 20px 50px;
+  }
+  .section {
+    margin-top: 72px;
+  }
 }
 
 @media screen and (min-width: 865px) and (max-width: 960px) {
-    .section {
-        margin-top: 80px;
-    }
+  .section {
+    margin-top: 80px;
+  }
 }
 
 @media screen and (min-width: 642px) and (max-width: 864px) {
-    .mintYourNft {
-        padding: 10px 10px;
-        width: 200px;
-    }
-    .bigHand {
-        width: 50%;
-    }
-    .headerInternalLinks {
-        display: none;
-    }
-    .section {
-        display: none;
-    }
+  .mintYourNft {
+    padding: 10px 10px;
+    width: 200px;
+  }
+  .bigHand {
+    width: 50%;
+  }
+  .headerInternalLinks {
+    display: none;
+  }
+  .section {
+    display: none;
+  }
 }
 
 @media screen and (max-width: 641px) {
-    .headerParent {
-        height: 100%;
-    }
+  .headerParent {
+    height: 100%;
+  }
 
-    .headerEllipse {
-        width: 60%;
-        height: 350px;
-        top: auto;
-        left: auto;
-        transform: none;
-    }
-    
-    .headerEllipseTwo {
-        display: none;
-    }
+  .headerEllipse {
+    width: 60%;
+    height: 350px;
+    top: auto;
+    left: auto;
+    transform: none;
+  }
 
-    .spiral {
-        display: none;
-    }
+  .headerEllipseTwo {
+    display: none;
+  }
 
-    .bigHand {
-        display: none;
-    }
+  .spiral {
+    display: none;
+  }
 
-    .headerLogo {
-        width: 60px;
-        height: 50px;
-    }
+  .bigHand {
+    display: none;
+  }
 
-    .headerInternalLinks {
-        display: none;
-    }
+  .headerLogo {
+    width: 60px;
+    height: 50px;
+  }
 
-    .externalLink {
-        display: none !important;
-    }
+  .headerInternalLinks {
+    display: none;
+  }
 
-    .headerContent {
-        padding: 5%;
-        width: 90%;
-        height: auto;
-        justify-content: center;
-        align-items: center;
-        background-image: url('../../assets/images/landinghand.png');
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size: 80% 125%;
-    }
+  .externalLink {
+    display: none !important;
+  }
 
-    .headerAttractiveHeading {
-        text-align: center;
-        margin-top: 10px;
-        font-size: 30px;
-    }
+  .headerContent {
+    padding: 5%;
+    width: 90%;
+    height: auto;
+    justify-content: center;
+    align-items: center;
+    background-image: url("../../assets/images/landinghand.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 80% 125%;
+  }
 
-    .headerSubHeading {
-        font-size: 25px;
-        font-weight: bold;
-        text-align: center;
-    }
+  .headerAttractiveHeading {
+    text-align: center;
+    margin-top: 10px;
+    font-size: 30px;
+  }
 
-    .headerHeadingContent {
-        text-align: center;
-        font-weight: bold;
-    }
+  .headerSubHeading {
+    font-size: 25px;
+    font-weight: bold;
+    text-align: center;
+  }
 
-    .poweredBy {
-        flex-direction: row-reverse;
-    }
+  .headerHeadingContent {
+    text-align: center;
+    font-weight: bold;
+  }
 
-    .poweredByLogo {
-        width: 50%;
-        height: 80px;
-    }
+  .poweredBy {
+    flex-direction: row-reverse;
+  }
 
-    .mintYourNft {
-        padding: 15px 35px;
-        font-size: 15px;
-    }
+  .poweredByLogo {
+    width: 50%;
+    height: 80px;
+  }
 
-    .headerBottom {
-        display: flex;
-        width: 100%;
-        justify-content: flex-start;
-    }
-    
-    .headerBottomContent {
-        white-space: nowrap;
-        margin: 0 10px;
-    }
+  .mintYourNft {
+    padding: 15px 35px;
+    font-size: 15px;
+  }
 
-    @keyframes slider {
-        0% {
-          transform: translate(0, 0);
-        }
-        33% {
-            transform: translate(-70%, 0);
-        }
-        66% {
-            transform: translate(-130%, 0);
-        }
-        100% {
-            transform: translate(-200%, 0);
-        } 
+  .headerBottom {
+    display: flex;
+    width: 100%;
+    justify-content: flex-start;
+  }
+
+  .headerBottomContent {
+    white-space: nowrap;
+    margin: 0 10px;
+  }
+
+  @keyframes slider {
+    0% {
+      transform: translate(0, 0);
     }
-} 
+    33% {
+      transform: translate(-70%, 0);
+    }
+    66% {
+      transform: translate(-130%, 0);
+    }
+    100% {
+      transform: translate(-200%, 0);
+    }
+  }
+}
 
 @media screen and (max-height: 641px) {
-    .headerAttractiveHeading {
-        font-size: 45px;
-    }
-    .headerSubHeading {
-        font-size: 30px;
-    }
+  .headerAttractiveHeading {
+    font-size: 45px;
+  }
+  .headerSubHeading {
+    font-size: 30px;
+  }
 }
