--- a/src/components/HowToAiverse/HowToAiverse.css
+++ b/src/components/HowToAiverse/HowToAiverse.css
@@ -1,4 +1,4 @@
-.aiversebg{
+.aiversebg {
   height: 950px;
   width: 100%;
   background-color: black;
@@ -9,7 +9,12 @@
   top: 97.5%;
   width: 100%;
   height: 130%;
-  background: linear-gradient(158.16deg, rgba(183, 0, 165, 0.76) 31.96%, rgba(107, 0, 157, 0.76) 41.66%, rgba(107, 0, 157, 0.76) 46.07%);
+  background: linear-gradient(
+    158.16deg,
+    rgba(183, 0, 165, 0.76) 31.96%,
+    rgba(107, 0, 157, 0.76) 41.66%,
+    rgba(107, 0, 157, 0.76) 46.07%
+  );
   opacity: 30%;
 }
 
@@ -17,23 +22,23 @@
   color: #61dafb;
 }
 
-.header-aiverse{
+.header-aiverse {
   background-clip: text;
   font-style: normal;
   font-weight: 800;
-  color: #FFFFFF;
+  color: #ffffff;
   width: 40%;
   font-size: 4rem;
 }
 
-.top-header{
+.top-header {
   display: flex;
   text-align: left;
   margin-left: 13%;
 }
 
-.p1{
-  font-family: 'Inter';
+.p1 {
+  font-family: "Inter";
   font-weight: 300;
   font-size: xx-large;
   line-height: 160%;
@@ -44,23 +49,24 @@
   margin-bottom: 5%;
 }
 
-.robot{
+.robot {
   display: flex;
   width: 378px;
   transform: scaleX(-1);
-  height: 50%;
+  /* height: 50%; */
   margin-top: -15%;
   margin-left: 10%;
+  /* height: 500px; */
 }
 
-.space{
-    width: 28%;
-    position: relative;
-    top: -80px;
-    left: 60%;
+.space {
+  width: 28%;
+  position: relative;
+  top: -80px;
+  left: 60%;
 }
 
-.techImg{
+.techImg {
   width: 16%;
   height: 62%;
   transform: rotate(40deg);
@@ -70,7 +76,7 @@
   margin-top: -19%;
 }
 
-.box{
+.box {
   position: absolute;
   height: 12%;
   width: 30%;
@@ -84,17 +90,17 @@
   margin-left: 15%;
   width: 40%;
   height: 90px;
-  font-family: 'Orbitron', sans-serif;
+  font-family: "Orbitron", sans-serif;
   font-weight: 600;
   font-size: 30px;
   line-height: 40px;
   display: flex;
   align-items: center;
   text-align: left;
-  color: #FFFFFF;
+  color: #ffffff;
   margin-top: 0;
   margin-right: 20px;
-} 
+}
 
 /* @media only screen and (max-width: 1400px){
     .header-aiverse{
@@ -198,13 +204,13 @@
     top: 96.1%;
   }
   .robot {
-      margin-top: -21%;
+    margin-top: -21%;
   }
   .techImg {
-      margin-left: 65%;
+    margin-left: 65%;
   }
   .box {
-      width: 35%;
+    width: 35%;
   }
 }
 
