--- a/src/components/Mint/Mint.css
+++ b/src/components/Mint/Mint.css
@@ -45,6 +45,7 @@
     background: linear-gradient(90deg, rgba(0, 0, 0, 0.38) -1.46%, rgba(39, 31, 28, 0.0798) 100%);
     backdrop-filter: blur(14px);
     cursor: pointer;
+    z-index: 1000;
 }
 
 
@@ -56,6 +57,7 @@
     background-color: #2CA0E2;
     color: white;
     border: none;
+    z-index: 1000;
     clip-path: polygon(25% 0, 100% 0, 100% 40%, 100% 75%, 75% 100%, 39% 100%, 0 100%, 0% 25%);
 
 }
@@ -120,11 +122,13 @@
 
 .mintEmailInput {
     border: none;
-    color: white;
+    color: black;
     outline: none;
     padding: 15px 15px;
     width: 35%;
     cursor: pointer;
+    z-index: 1000;
+    opacity: 50%;
 }
 
 .mintEmailButton {
@@ -136,6 +140,7 @@
     background-color: #FF6706;
     color: white;
     border: none;
+    z-index: 1000;
     clip-path: polygon(25% 0, 100% 0, 100% 40%, 100% 75%, 75% 100%, 39% 100%, 0 100%, 0% 25%);    
 }
 
@@ -351,6 +356,7 @@
         width: 40%;
         background: linear-gradient(90deg, rgba(0, 0, 0, 0.38) -1.46%, rgba(39, 31, 28, 0.0798) 100%);
         backdrop-filter: blur(14px);
+        z-index: 1000;
     }
     
     .buttonMint {
@@ -409,6 +415,8 @@
         width: 90%;
         margin-bottom: 20px;
         backdrop-filter: blur(14px);
+        color: white;
+        opacity: 100%;
         background: linear-gradient(90deg, rgba(0, 0, 0, 0.38) -1.46%, rgba(39, 31, 28, 0.0798) 100%);
     }
 
