--- a/src/components/Engage/Engage.css
+++ b/src/components/Engage/Engage.css
@@ -36,7 +36,7 @@
 }
 
 .engageSteps {
-    width: auto;
+    width: 20%;
     height: auto;
     margin-left: 52px;
     border-radius: 0px 0px 60px 0px;
@@ -72,6 +72,7 @@
 }
 
 .skull{
+    display: none;
     position: absolute;
     top: 305%;
     width: 15%;
