--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,7 +4,7 @@
   align-items: flex-start;
   flex-direction: column;
   width: 100%;
-  height: 100vh;
+  height: 95vh;
   background-color: black;
 }
 
@@ -107,6 +107,7 @@
 
 .connectButton {
   outline: none;
+  z-index: 1000;
   font-size: large;
   padding: 15px 20px;
   background: #9e64f8;
@@ -184,58 +185,13 @@
   font-size: 25px;
 }
 
-.section {
-  display: flex;
-  align-items: center;
-  overflow: hidden;
-  width: 100%;
-  border-top: 2px solid grey;
-  border-bottom: 2px solid grey;
-  z-index: 2;
-  height: 5%;
-  margin-top: 20px;
-}
-
-.headerBottom {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  width: 100%;
-  color: white;
-  margin-top: 0;
-  height: 5%;
-  animation-name: slider;
-  animation-duration: 10s;
-  animation-timing-function: ease-in-out;
-  animation-iteration-count: infinite;
-  animation-direction: normal;
-  animation-fill-mode: backwards;
-  animation-play-state: running;
-}
-
-.headerBottomContent {
-  margin: 0;
-  padding: 10px 0;
-  font-size: larger;
-  font-weight: 500;
-}
-
-.headerBottom::-webkit-scrollbar {
-  display: none;
-}
 
 @media screen and (min-width: 1249px) and (max-width: 1440px) {
-  .section {
-    margin-top: 55px;
-  }
 }
 
 @media screen and (min-width: 1057px) and (max-width: 1248px) {
   .bigHand {
     height: 95%;
-  }
-  .section {
-    margin-top: 65px;
   }
 }
 
@@ -255,20 +211,17 @@
         font-size: 18px;
         padding: 20px 50px;
     }
-    .section {
-        margin-top: 72px;
-    }
 }
 
 @media screen and (min-width: 865px) and (max-width: 960px) {
-    .section {
-        margin-top: 80px;
-    }
     .headerAttractiveHeading {
         font-size: 40px;
     }
     .headerSubHeading {
         font-size: 30px;
+    }
+    .headerBottomContent {
+      font-size: medium;
     }
 }
 
@@ -281,9 +234,6 @@
         width: 50%;
     }
     .headerInternalLinks {
-        display: none;
-    }
-    .section {
         display: none;
     }
     .headerAttractiveHeading {
@@ -361,43 +311,26 @@
     font-weight: bold;
   }
 
-    .poweredBy {
-        justify-content: center;
-    }
-
-    .mintYourNft {
-        padding: 15px 35px;
-        font-size: 15px;
-    }
-
-  .headerBottom {
-    display: flex;
-    width: 100%;
-    justify-content: flex-start;
+  .poweredBy {
+      justify-content: center;
   }
 
-  .headerBottomContent {
-    white-space: nowrap;
-    margin: 0 10px;
-  }
-
-  @keyframes slider {
-    0% {
-      transform: translate(0, 0);
-    }
-    33% {
-      transform: translate(-70%, 0);
-    }
-    66% {
-      transform: translate(-130%, 0);
-    }
-    100% {
-      transform: translate(-200%, 0);
-    }
+  .mintYourNft {
+      padding: 15px 35px;
+      font-size: 15px;
   }
 }
 
 @media screen and (max-height: 641px) {
+  .headerAttractiveHeading {
+    font-size: 45px;
+  }
+  .headerSubHeading {
+    font-size: 30px;
+  }
+}
+
+@media screen and (min-height: 642px) and (max-height: 800px) {
   .headerAttractiveHeading {
     font-size: 45px;
   }
