--- a/src/components/HowToAiverse/HowToAiverse.css
+++ b/src/components/HowToAiverse/HowToAiverse.css
@@ -1,14 +1,13 @@
 .aiversebg {
-  height: 950px;
+  height: 100vh;
   width: 100%;
   background-color: black;
 }
 
 .howToFilter {
   position: absolute;
-  top: 97.5%;
   width: 100%;
-  height: 130%;
+  height: 100vh;
   background: linear-gradient(
     158.16deg,
     rgba(183, 0, 165, 0.76) 31.96%,
@@ -35,6 +34,7 @@
   display: flex;
   text-align: left;
   margin-left: 13%;
+  padding-top: 20px;
 }
 
 .p1 {
@@ -51,19 +51,8 @@
 
 .robot {
   display: flex;
-  width: 378px;
+  width: 50%;
   transform: scaleX(-1);
-  /* height: 50%; */
-  margin-top: -15%;
-  margin-left: 10%;
-  /* height: 500px; */
-}
-
-.space {
-  width: 28%;
-  position: relative;
-  top: -80px;
-  left: 60%;
 }
 
 .techImg {
@@ -77,112 +66,24 @@
 }
 
 .box {
-  position: absolute;
-  height: 12%;
-  width: 30%;
+  width: 60%;
   background: #7b71a05c;
   border-top-right-radius: 50px;
-  margin-left: 9%;
   padding: 10px 20px;
 }
 
 .imagin {
-  margin-left: 15%;
-  width: 40%;
-  height: 90px;
   font-family: "Orbitron", sans-serif;
   font-weight: 600;
-  font-size: 30px;
+  font-size: x-large;
   line-height: 40px;
-  display: flex;
-  align-items: center;
-  text-align: left;
   color: #ffffff;
-  margin-top: 0;
-  margin-right: 20px;
 }
 
-/* @media only screen and (max-width: 1400px){
-    .header-aiverse{
-      width: 45%;
-    }
-    .h2{
-      width: 50%;
-      font-size: 60px;
-    }
-    .techImg{
-      width: 20%;
-    }
-}
-
-@media only screen and (max-width: 1024px){
-  .header-aiverse{
-    width: 55%;
-    font-size: 3.5rem;
-  }
-  .p1{
-    margin-top: 23%;
-    margin-left: -55%;
-  }
-  .techImg{
-    width: 22%;
-    transform: rotate(35deg);
-  }
-  .box{
-    width: 40%;
-  }
-  .h2, .p2{
-    display: none;
-  }
-}
-
-@media only screen and (max-width: 800px){
-  .box{
-    width: 50%;
-  }
-  .robot{
-    width: 310px;
-  }
-  .techImg{
-    width: 28%;
-    transform: rotate(35deg);
-  }
-  .top-header{
-    width: 120%;
-    margin-left: 40%;
-  }
-}
-
-@media only screen and (max-width: 650px){
-  .header-aiverse{
-    width: 70%;
-    text-align: center;
-    font-size: 2rem;
-  }
-  .p1 {
-    margin-top: 13%;
-    margin-left: -61%;
-  }
-  .robot{
-    width: 280px;
-  }
-  .box{
-    width: 70%;
-    margin-left: -30%;
-  }
-  .techImg{
-    width: 44%;
-    height: 70%;
-    transform: rotate(37deg);
-  }
-} */
 
 @media screen and (min-width: 1249px) and (max-width: 1440px) {
   .header-aiverse {
     font-size: 3rem;
-  }
-  .robot {
-    margin-top: -16%;
   }
 }
 
@@ -194,30 +95,15 @@
     width: 18%;
     margin-left: 68%;
   }
-  .robot {
-    margin-top: -20%;
-  }
 }
 
 @media screen and (min-width: 1057px) and (max-width: 1152px) {
-  .howToFilter {
-    top: 96.1%;
-  }
-  .robot {
-    margin-top: -21%;
-  }
   .techImg {
     margin-left: 65%;
-  }
-  .box {
-    width: 35%;
   }
 }
 
 @media screen and (min-width: 962px) and (max-width: 1056px) {
-  .howToFilter {
-    top: 96.1%;
-  }
   .header-aiverse {
     font-size: xx-large;
   }
@@ -229,13 +115,6 @@
     width: 15%;
     margin-left: 63%;
   }
-  .robot {
-    height: 40%;
-    margin-top: -18.5%;
-  }
-  .box {
-    width: 42%;
-  }
 }
 
 @media screen and (min-width: 642px) and (max-width: 960px) {
@@ -243,19 +122,8 @@
     width: 20%;
     margin-left: 60%;
   }
-  .robot {
-    margin-top: -19%;
-    height: 30%;
-    width: 300px;
-  }
   .header-aiverse {
     font-size: 30px;
-  }
-  .box {
-    width: 70%;
-  }
-  .space {
-    height: 80%;
   }
 }
 
@@ -292,31 +160,6 @@
     margin-top: -15%;
     opacity: 50%;
   }
-  .robot {
-    height: 25%;
-    margin-top: 8%;
-    width: 40%;
-    margin-left: -2%;
-  }
-  .box {
-    height: 11%;
-    width: 80%;
-    padding: 10px 20px;
-    margin-left: 0;
-  }
-  .imagin {
-    width: 60%;
-    height: 85px;
-    line-height: 35px;
-    margin-left: 0;
-    font-size: xx-large;
-  }
-  .space {
-    width: 35%;
-    height: 85%;
-    top: -80px;
-    left: 60%;
-  }
 }
 
 @media screen and (min-height: 581px) and (max-height: 641px) {
@@ -332,35 +175,19 @@
   .p1 {
     font-size: larger;
   }
-  .robot {
-    height: 30vh;
-    width: 40vh;
-    margin-top: -8%;
-  }
-  .box {
-    width: 50vh;
-  }
-  .imagin {
-    font-size: large;
-  }
-  .space {
-    top: -83px;
-  }
 }
 
 @media screen and (max-height: 580px) {
   .robot {
     height: 30vh;
     width: 40vh;
-    margin-top: -35%;
+    margin-top: -20%;
   }
   .techImg {
     margin-top: -20%;
   }
-  .box {
-    height: 15%;
-  }
-  .imagin {
-    font-size: x-large;
-  }
+}
+
+@media screen and (min-height: 580px) and (max-height: 800px) {
+  
 }
